@@ -7,6 +7,8 @@ import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.List;
 
+import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
+
 public class MediaCCCSearchQueryHandlerFactory extends SearchQueryHandlerFactory {
     public static final String ALL = "all";
     public static final String CONFERENCES = "conferences";
@@ -31,7 +33,7 @@ public class MediaCCCSearchQueryHandlerFactory extends SearchQueryHandlerFactory
                          final String sortFilter) throws ParsingException {
         try {
             return "https://media.ccc.de/public/events/search?q="
-                    + URLEncoder.encode(query, "UTF-8");
+                    + URLEncoder.encode(query, UTF_8);
         } catch (UnsupportedEncodingException e) {
             throw new ParsingException("Could not create search string with query: " + query, e);
         }
